--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,11 +4,28 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 h1 {
-    font-family: 'Shrikhand', sans-serif;
+    font-family: 'Shrikhand', 'Roboto', sans-serif;
+    font-weight: 700;
     font-size: 30px;
+    line-height: 32px;
 }
 h2 {
     font-weight: 700;
     font-size: 24px;
     line-height: 26px;
+}
+h3 {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 20px;
+}
+p {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+}
+span {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
 }
