--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,12 @@
 @import "./base/base";
 @import "./base/typography";
 @import "./utils/variables";
+@import "./utils/functions";
+@import "./composants/loader";
+@import "./layout/header";
+@import "./layout/location";
+@import "./layout/intro";
+@import "./layout/operation";
+@import "./layout/restaurants";
+@import "./layout/footer";
+@import "./layout/menu";
