--- a/sass/layout/_restaurants.scss
+++ b/sass/layout/_restaurants.scss
@@ -73,7 +73,7 @@
     &__full {
         position: absolute;
         font-size: 25px;
-        background: linear-gradient($color-primary, $color-secondary);/*?????*/
+        background: linear-gradient($color-primary, $color-secondary);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         opacity: 0%;
