--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,7 @@ span {
 .heart__full {
   position: absolute;
   font-size: 25px;
-  background: linear-gradient(#9356DC, #FF79DA); /*?????*/
+  background: linear-gradient(#9356DC, #FF79DA);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   opacity: 0%;
