--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ span {
 .loader {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   z-index: 100;
   background: #fff;
   opacity: 90%;
