--- a/sass/composants/_loader.scss
+++ b/sass/composants/_loader.scss
@@ -1,7 +1,7 @@
 .loader {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     z-index: 100;
     background: #fff;
     opacity: 90%;
