--- a/css/style.css
+++ b/css/style.css
@@ -447,6 +447,12 @@ span {
   z-index: 10;
   top: -50px;
 }
+.title__info h2 {
+  font-family: "Shrikhand", "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 32px;
+}
 
 .sectionmain {
   display: flex;
