--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -19,6 +19,12 @@
         position: relative;
         z-index: 10;
         top: -50px;
+        h2 {
+            font-family: 'Shrikhand', 'Roboto', sans-serif;
+            font-weight: 700;
+            font-size: 30px;
+            line-height: 32px;
+        }
     }
 }
 .sectionmain {
